git fix commentray

--- a/commentary/sass/commentary.scss
+++ b/commentary/sass/commentary.scss
@@ -148,6 +148,10 @@ body {
           line-height: 1.8em;
         }
       }
+      img {
+        width: 100%;
+        margin: 0 2em;
+      }
       // ↓↓　-------ページによって異なる------- ↓↓
       #visual {
 
