--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -295,6 +295,7 @@ main {
           img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
           }
           img[src=""] {
             display: none;
